Over scroll of bottom sticky headers should be fixed, and expansion of hidden stuck headers should now work

--- a/src/skins/vector/css/matrix-react-sdk/views/rooms/RoomList.css
+++ b/src/skins/vector/css/matrix-react-sdk/views/rooms/RoomList.css
@@ -32,3 +32,8 @@ limitations under the License.
     overflow-x: hidden ! important;
     overflow-y: scroll ! important;
 }
+
+/* Make sure the scrollbar is above the sticky headers from RoomList */
+.mx_RoomList_scrollbar .gm-scrollbar.-vertical {
+    z-index: 3;
+}
