--- a/src/skins/vector/css/vector-web/structures/LeftPanel.css
+++ b/src/skins/vector/css/vector-web/structures/LeftPanel.css
@@ -49,7 +49,6 @@ limitations under the License.
     flex: 1 1 0;
 
     overflow-y: auto;
-    z-index: 3;
 }
 
 .mx_LeftPanel.collapsed .mx_BottomLeftMenu {
